<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#3a383a">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/head_text"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#c5c7c5"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="10"
            android:layout_margin="5dp">
            <TextView
                android:text="@string/string1"
                android:layout_marginTop="10dp"
                style="@style/tvStyle"/>
            <TextView
                android:text="@string/string2"
                android:layout_marginTop="18dp"
                style="@style/tvStyle"/>
            <TextView
                android:text="@string/string3"
                android:layout_marginTop="18dp"
                style="@style/tvStyle"/>
            <TextView
                android:text="@string/stringId"
                android:layout_marginTop="18dp"
                style="@style/tvStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="90">
            <EditText
                android:id="@+id/edName"
                style="@style/etStyle"
                android:inputType="textPersonName"
                tools:ignore="Autofill,LabelFor" />
            <EditText
                android:id="@+id/edSurname"
                style="@style/etStyle"
                android:inputType="textPersonName"
                tools:ignore="Autofill,LabelFor"  />
            <EditText
                android:id="@+id/edAge"
                style="@style/etStyle"
                android:inputType="number"
                tools:ignore="Autofill,LabelFor" />
            <EditText
                android:id="@+id/edId"
                style="@style/etStyle"
                android:inputType="number"
                tools:ignore="Autofill,LabelFor"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="30dp"
    android:weightSum="3">
    <Button
        android:id="@+id/btnAdd"
        android:text="@string/btnAdd"
        style="@style/btnStyle"
        />
    <Button
        android:id="@+id/btnDel"
        android:text="@string/btnDeleteAt"
        style="@style/btnStyle"/>
    <Button
        android:id="@+id/btnDelAll"
        android:text="@string/btnDeleteAll"
        style="@style/btnStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btnUpd"
            android:text="@string/btnUpdate"
            style="@style/btnStyle"/>
        <Button
            android:id="@+id/btnRead"
            android:text="@string/btnRead"
            style="@style/btnStyle"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logchat"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="#c5c7c5"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:verticalScrollbarPosition="right"
            android:background="@color/colorPrimaryDark">
            <TextView
                android:id="@+id/tvOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#c5c7c5"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"/>
        </ScrollView>
    </LinearLayout>
</LinearLayout >